--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/EAFIT-BI/Programming-for-Business-2025-II/blob/main/Contaexpress.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "ce153653-3890-4dd3-8375-403b5db0c38e",
       "metadata": {
         "id": "ce153653-3890-4dd3-8375-403b5db0c38e"
@@ -31,24 +41,26 @@
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 106
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "8823c60e-b557-440b-c33b-fbaffbf3a68b"
+        "outputId": "cd9f5a3d-8928-4a68-9615-819ea54f65f4"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Bienvenido a CONTAEXPRESS🔢\n",
-            "\n",
-            " Ingrese su nombre: Mariana\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "unterminated string literal (detected at line 3) (ipython-input-191102509.py, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-191102509.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(\"   ____            _        _____\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 3)\n"
           ]
         }
       ],
       "source": [
         "# La función print es una función de salida\n",
+        "\n",
+        "print(\"\")\n",
         "print(\"Bienvenido a CONTAEXPRESS🔢\")\n",
         "\n",
         "# mientras la función input es una función de entrada\n",
@@ -476,7 +488,8 @@
       "version": "3.11.7"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
