--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 24,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
@@ -36,14 +36,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 25,
       "id": "Tudu9sXyWMnK",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tudu9sXyWMnK",
-        "outputId": "13c530aa-f5f0-4b75-8858-0c0ab4db0fc7"
+        "outputId": "445d87b6-52b4-47d2-ba9c-fec6dc8fd970"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 26,
       "id": "44fd466a-db4e-434d-bca7-b716d9981870",
       "metadata": {
         "id": "44fd466a-db4e-434d-bca7-b716d9981870"
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "id": "c1yHblc4Ppyd",
       "metadata": {
         "id": "c1yHblc4Ppyd"
@@ -100,14 +100,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 28,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "39954984-a08b-46fa-98ae-e861cc7d64b1"
+        "outputId": "b5dbdfd0-5cf3-4485-d8c0-87bd79529cc1"
       },
       "outputs": [
         {
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 29,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -189,14 +189,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 30,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "6a5bc0f1-4753-481a-c68a-1ba554383d5d"
+        "outputId": "4a58500a-44f8-4e79-8108-c60bd5c0cd9c"
       },
       "outputs": [
         {
@@ -223,14 +223,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 33,
       "id": "12aac789-74bc-4daf-b8c3-5e50ba1f0c24",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "12aac789-74bc-4daf-b8c3-5e50ba1f0c24",
-        "outputId": "36731829-e126-4f20-cbcf-1d28e2a0a360"
+        "outputId": "2eec88a2-5ffa-4a3c-d1da-b0e53a449789"
       },
       "outputs": [
         {
@@ -245,7 +245,8 @@
             "\n",
             "Digite una opción: 1\n",
             "\n",
-            "La opción elegida es el promedio\n"
+            "El promedio de las transacciones es: $ Valor (USD$)    8.75\n",
+            "dtype: float64\n"
           ]
         }
       ],
@@ -264,9 +265,19 @@
         "    # Revisamos los condicionales para la opción elegida por el usuario\n",
         "    # en el menu_2 almacenada en opcion_2\n",
         "    if opcion_2 == 1:\n",
-        "        print(\"\\nLa opción elegida es el promedio\")\n",
+        "        # primero cargamos los datos\n",
+        "        datos = pd.read_excel(\"/content/datos.xlsx\")\n",
+        "        # después calculamos la media o promedio\n",
+        "        datos[[\"Valor (USD$)\"]].mean()\n",
+        "        # imprimimos el mensaje con el resultado\n",
+        "        print(\"\\nEl promedio de las transacciones es: $\", datos[[\"Valor (USD$)\"]].mean())\n",
         "    elif opcion_2 == 2:\n",
-        "        print(\"\\nLa opción elegida es el total\")\n",
+        "        # primero cargamos los datos\n",
+        "        datos = pd.read_excel(\"/content/datos.xlsx\")\n",
+        "        # después calculamos la suma o total\n",
+        "        datos[[\"Valor (USD$)\"]].sum()\n",
+        "        # imprimimos el mensaje con resultado\n",
+        "        print(\"\\nEl total de las transacciones es: $\", datos[[\"Valor (USD$)\"]].sum())\n",
         "    else:\n",
         "        print(\"\\nLa opción seleccionada no es correcta\")\n",
         "elif opcion == 3:\n",
@@ -279,7 +290,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "source": [],
+      "metadata": {
+        "id": "z0NrjNGkXD0s"
+      },
+      "id": "z0NrjNGkXD0s",
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "id": "bd825cf2-7aee-4b57-aa64-076f07d43189",
       "metadata": {
         "id": "bd825cf2-7aee-4b57-aa64-076f07d43189"
