--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
@@ -36,96 +36,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "id": "Tudu9sXyWMnK",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Tudu9sXyWMnK",
-        "outputId": "445d87b6-52b4-47d2-ba9c-fec6dc8fd970"
+        "id": "Tudu9sXyWMnK"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  ____            _        _____                              \n",
-            " / ___|___  _ __ | |_ __ _| ____|_  ___ __  _ __ ___  ___ ___ \n",
-            "| |   / _ \\| '_ \\| __/ _` |  _| \\ \\/ / '_ \\| '__/ _ \\/ __/ __|\n",
-            "| |__| (_) | | | | || (_| | |___ >  <| |_) | | |  __/\\__ \\__ \\\n",
-            " \\____\\___/|_| |_|\\__\\__,_|_____/_/\\_\\ .__/|_|  \\___||___/___/\n",
-            "                                     |_|                      \n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Cargamos la librería pyfiglet\n",
         "import pyfiglet\n",
-        "\n",
-        "# Guardamos en la variable ascii_banner el mensaje que queremos mostrar\n",
-        "ascii_banner = pyfiglet.figlet_format(\"ContaExpress\")\n",
-        "# Imprimimos la variable ascii_banner\n",
-        "print(ascii_banner)"
+        "import pandas as pd\n",
+        "import os\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "id": "44fd466a-db4e-434d-bca7-b716d9981870",
-      "metadata": {
-        "id": "44fd466a-db4e-434d-bca7-b716d9981870"
-      },
-      "outputs": [],
-      "source": [
-        "# Para ver las fuentes disponibles\n",
-        "#import pyfiglet\n",
-        "#fonts = pyfiglet.Figlet().getFonts()\n",
-        "#print(fonts)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "id": "c1yHblc4Ppyd",
-      "metadata": {
-        "id": "c1yHblc4Ppyd"
-      },
-      "outputs": [],
-      "source": [
-        "# Importamos la librería para gestión de Dataframes (tablas)\n",
-        "import pandas as pd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 10,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "b5dbdfd0-5cf3-4485-d8c0-87bd79529cc1"
+        "outputId": "8b9b1ef8-11be-4ef1-b903-a19536b5168a"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "  ____            _      _                   \n",
+            " / ___|___  _ __ | |_   / \\   __ _ _ __ ___  \n",
+            "| |   / _ \\| '_ \\| __| / _ \\ / _` | '__/ _ \\ \n",
+            "| |__| (_) | | | | |_ / ___ \\ (_| | | | (_) |\n",
+            " \\____\\___/|_| |_|\\__/_/   \\_\\__, |_|  \\___/ \n",
+            "                             |___/           \n",
             "\n",
-            "Bienvenido a CONTAEXPRESS🔢\n",
+            "\n",
+            "Bienvenido a CONTAGRO 🌱\n",
             "\n",
             " Ingrese su nombre: Lina\n"
           ]
         }
       ],
       "source": [
+        "\n",
+        "# Guardamos en la variable ascii_banner el mensaje que queremos mostrar\n",
+        "ascii_banner = pyfiglet.figlet_format(\"ContAgro\")\n",
+        "# Imprimimos la variable ascii_banner\n",
+        "print(ascii_banner)\n",
+        "\n",
         "# La función print es una función de salida\n",
         "\n",
         "print(\"\")\n",
-        "print(\"Bienvenido a CONTAEXPRESS🔢\")\n",
+        "print(\"Bienvenido a CONTAGRO 🌱\")\n",
         "\n",
         "# mientras la función input es una función de entrada\n",
         "nombre = input(\"\\n Ingrese su nombre: \")"
@@ -133,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -147,6 +111,7 @@
         "    print(\"\\n1.Ingresar una nueva transacción\")\n",
         "    print(\"\\n2.Resumir por transacción\")\n",
         "    print(\"\\n3.Visualizar las últimas cinco (5) transacciones\")\n",
+        "    print(\"\\n4.Salir\")\n",
         "    # en la variable opción almacenamos la selección del usuario\n",
         "    opcion = int(input(\"\\n Digite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
@@ -181,27 +146,76 @@
         "    print(f\" Seleccione una opción de nuestro menú:\")\n",
         "    print(\"\\n1.Promedio\")\n",
         "    print(\"\\n2.Total\")\n",
+        "    print(\"\\n3.Regresar al menú anterior\")\n",
         "    # en la variable opción almacenamos la selección del usuario\n",
         "    opcion = int(input(\"\\nDigite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
-        "    return opcion"
+        "    return opcion\n",
+        "\n",
+        "def revisar_opcion(opcion, nombre):\n",
+        "  # Establecemos las condiciones para cada opción del menú\n",
+        "  # Inicializamos la lista de transacciones\n",
+        "\n",
+        "  if opcion == 1:\n",
+        "      # En caso de que el usuario elija la opción 1, llama a la función\n",
+        "      # nueva_transaccion\n",
+        "      os.system(\"cls\")\n",
+        "      nueva_transaccion()\n",
+        "  elif opcion == 2:\n",
+        "      # En caso de que el usuario elija la opción 2, llama a la función\n",
+        "      # menú 2\n",
+        "      os.system(\"cls\")\n",
+        "      opcion_2 = menu_2()\n",
+        "      # Revisamos los condicionales para la opción elegida por el usuario\n",
+        "      # en el menu_2 almacenada en opcion_2\n",
+        "      if opcion_2 == 1:\n",
+        "          # primero cargamos los datos\n",
+        "          datos = pd.read_excel(\"/content/datos.xlsx\")\n",
+        "          # Imprimimos el promedio\n",
+        "          print(\"\\nEl promedio de las transacciones es: $\", datos[[\"Valor ($COP)\"]].mean())\n",
+        "      elif opcion_2 == 2:\n",
+        "          # primero cargamos los datos\n",
+        "          datos = pd.read_excel(\"/content/datos.xlsx\")\n",
+        "          # imprimimos la suma\n",
+        "          print(\"\\nEl total de las transacciones es: $\", datos[[\"Valor ($COP)\"]].sum())\n",
+        "      elif opcion_2 == 3:\n",
+        "          # En caso de que el usuario elija la opción 3, llama a la función\n",
+        "          # menu\n",
+        "          os.system(\"cls\")\n",
+        "          opcion = menu(nombre)\n",
+        "      else:\n",
+        "          print(\"\\nLa opción seleccionada no es correcta\")\n",
+        "  elif opcion == 3:\n",
+        "      # En caso de que el usuario elija la opcón 3, llama a  la función\n",
+        "      # ultimas_transacciones\n",
+        "      os.system(\"cls\")\n",
+        "      ultimas_transacciones()\n",
+        "\n",
+        "  elif opcion == 4:\n",
+        "      # Salimos de la aplicación\n",
+        "      print(\"\\nGracias por usar ContaExpress\")\n",
+        "  else:\n",
+        "      print(\"\\nEsa opción no está dentro de nuestro menú\")\n",
+        "      print(\"\\nVuelva a intentarlo\")\n",
+        "      print(\"\\n\")\n",
+        "      menu(nombre)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 16,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "4a58500a-44f8-4e79-8108-c60bd5c0cd9c"
+        "outputId": "40aa21ac-04e3-46f5-c223-75a91e02b482"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             " Hola Lina, seleccione una opción de nuestro menú:\n",
             "\n",
@@ -211,102 +225,44 @@
             "\n",
             "3.Visualizar las últimas cinco (5) transacciones\n",
             "\n",
-            " Digite una opción: 2\n"
-          ]
-        }
-      ],
-      "source": [
-        "# hacemos uso de la función que acabamos de declarar. La salida\n",
-        "# de la función la almacenamos en la variable opcion\n",
-        "opcion = menu(nombre)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 33,
-      "id": "12aac789-74bc-4daf-b8c3-5e50ba1f0c24",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "12aac789-74bc-4daf-b8c3-5e50ba1f0c24",
-        "outputId": "2eec88a2-5ffa-4a3c-d1da-b0e53a449789"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "4.Salir\n",
+            "\n",
+            " Digite una opción: 2\n",
             " Seleccione una opción de nuestro menú:\n",
             "\n",
             "1.Promedio\n",
             "\n",
             "2.Total\n",
             "\n",
-            "Digite una opción: 1\n",
+            "3.Regresar al menú anterior\n",
             "\n",
-            "El promedio de las transacciones es: $ Valor (USD$)    8.75\n",
-            "dtype: float64\n"
+            "Digite una opción: 3\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            " Digite una opción: 4\n",
+            "\n",
+            "Gracias por usar ContaExpress\n"
           ]
         }
       ],
       "source": [
-        "# Establecemos las condiciones para cada opción del menú\n",
-        "# Inicializamos la lista de transacciones\n",
-        "\n",
-        "if opcion == 1:\n",
-        "    # En caso de que el usuario elija la opción 1, llama a la función\n",
-        "    # nueva_transaccion\n",
-        "    nueva_transaccion()\n",
-        "elif opcion == 2:\n",
-        "    # En caso de que el usuario elija la opción 2, llama a la función\n",
-        "    # menú 2\n",
-        "    opcion_2 = menu_2()\n",
-        "    # Revisamos los condicionales para la opción elegida por el usuario\n",
-        "    # en el menu_2 almacenada en opcion_2\n",
-        "    if opcion_2 == 1:\n",
-        "        # primero cargamos los datos\n",
-        "        datos = pd.read_excel(\"/content/datos.xlsx\")\n",
-        "        # después calculamos la media o promedio\n",
-        "        datos[[\"Valor (USD$)\"]].mean()\n",
-        "        # imprimimos el mensaje con el resultado\n",
-        "        print(\"\\nEl promedio de las transacciones es: $\", datos[[\"Valor (USD$)\"]].mean())\n",
-        "    elif opcion_2 == 2:\n",
-        "        # primero cargamos los datos\n",
-        "        datos = pd.read_excel(\"/content/datos.xlsx\")\n",
-        "        # después calculamos la suma o total\n",
-        "        datos[[\"Valor (USD$)\"]].sum()\n",
-        "        # imprimimos el mensaje con resultado\n",
-        "        print(\"\\nEl total de las transacciones es: $\", datos[[\"Valor (USD$)\"]].sum())\n",
-        "    else:\n",
-        "        print(\"\\nLa opción seleccionada no es correcta\")\n",
-        "elif opcion == 3:\n",
-        "    # En caso de que el usuario elija la opcón 3, llama a  la función\n",
-        "    # ultimas_transacciones\n",
-        "    ultimas_transacciones()\n",
-        "else:\n",
-        "    print(\"\\nEsa opción no está dentro de nuestro menú\")"
+        "# hacemos uso de la función que acabamos de declarar. La salida\n",
+        "# de la función la almacenamos en la variable opcion\n",
+        "while True:\n",
+        "  os.system(\"cls\")\n",
+        "  opcion = menu(nombre)\n",
+        "  revisar_opcion(opcion, nombre)\n",
+        "  print(\"\\nGracias por usar ContAgro\")\n",
+        "  break\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "z0NrjNGkXD0s"
-      },
-      "id": "z0NrjNGkXD0s",
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "id": "bd825cf2-7aee-4b57-aa64-076f07d43189",
-      "metadata": {
-        "id": "bd825cf2-7aee-4b57-aa64-076f07d43189"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
