--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 51,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -249,14 +249,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 52,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "0be411b1-76f5-4688-a5e3-ad436f9c28a2"
+        "outputId": "f0e6e9e7-9c3f-413e-9c60-10c83181feca"
       },
       "outputs": [
         {
@@ -282,14 +282,14 @@
             "\n",
             "3.Regresar al menú anterior\n",
             "\n",
-            "Digite una opción: 1\n",
+            "Digite una opción: 2\n",
             "\n",
-            "El valor promedio por tipo de transacción es:\n",
+            "El total por tipo de transacción es:\n",
             "Ingreso/Egreso\n",
-            "Egreso - Operacional      26500.0\n",
+            "Egreso - Operacional      53000.0\n",
             "Egreso - Otros          1000000.0\n",
             "Ingreso - Aporte          30000.0\n",
-            "Ingreso - Venta           29000.0\n",
+            "Ingreso - Venta          116000.0\n",
             "Name: Valor ($COP), dtype: float64\n",
             "\n",
             "Gracias por usar ContAgro\n"
@@ -326,12 +326,12 @@
         "datos"
       ],
       "metadata": {
-        "id": "VUNUbHvGioMt",
-        "outputId": "00e88e4a-4178-4bb4-bba3-84c64a05616b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "VUNUbHvGioMt",
+        "outputId": "00e88e4a-4178-4bb4-bba3-84c64a05616b"
       },
       "id": "VUNUbHvGioMt",
       "execution_count": 45,
