--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 62,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 63,
       "id": "Tudu9sXyWMnK",
       "metadata": {
         "id": "Tudu9sXyWMnK"
@@ -46,7 +46,7 @@
         "# Cargamos la librería pyfiglet\n",
         "import pyfiglet\n",
         "import pandas as pd\n",
-        "import os\n"
+        "import os"
       ]
     },
     {
@@ -59,19 +59,19 @@
         "id": "wOprToC5Wlkc"
       },
       "id": "wOprToC5Wlkc",
-      "execution_count": 17,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 65,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
-        "outputId": "8456b6d5-d8e0-4f43-8c06-471dc48239dd"
+        "outputId": "d0aa920d-31f4-48a1-bb5e-d21420fd8389"
       },
       "outputs": [
         {
@@ -110,17 +110,7 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "sZft2vPwdPuM"
-      },
-      "id": "sZft2vPwdPuM",
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 70,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -180,6 +170,8 @@
         "    datos.loc[len(datos)] = transaccion\n",
         "    # guarda el archivo modificado\n",
         "    datos.to_excel(\"/content/datos.xlsx\", index=False)\n",
+        "    input(\"\\nPresione una tecla para continuar...\")\n",
+        "    menu(nombre)\n",
         "\n",
         "# Definimos la función ultimas_transacciones para visualizar las últimas 5\n",
         "# transacciones almacenadas en el archivo de datos\n",
@@ -220,10 +212,14 @@
         "          # Imprimimos el promedio\n",
         "          print(\"\\nEl valor promedio por tipo de transacción es:\")\n",
         "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].mean())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          menu(nombre)\n",
         "      elif opcion_2 == 2:\n",
         "          # Imprimimos la suma\n",
         "          print(\"\\nEl total por tipo de transacción es:\")\n",
         "          print(datos.groupby(\"Ingreso/Egreso\")[\"Valor ($COP)\"].sum())\n",
+        "          input(\"\\nPresione una tecla para continuar...\")\n",
+        "          menu(nombre)\n",
         "      elif opcion_2 == 3:\n",
         "          # En caso de que el usuario elija la opción 3, llama a la función\n",
         "          # menu\n",
@@ -231,15 +227,20 @@
         "          opcion = menu(nombre)\n",
         "      else:\n",
         "          print(\"\\nLa opción seleccionada no es correcta\")\n",
+        "          print(\"\\nVuelva a intentarlo\")\n",
+        "          print(\"\\n\")\n",
+        "          menu(nombre)\n",
         "  elif opcion == 3:\n",
         "      # En caso de que el usuario elija la opcón 3, llama a  la función\n",
         "      # ultimas_transacciones\n",
         "      os.system(\"cls\")\n",
         "      ultimas_transacciones(datos)\n",
+        "      input(\"\\nPresione una tecla para continuar...\")\n",
+        "      menu(nombre)\n",
         "\n",
         "  elif opcion == 4:\n",
         "      # Salimos de la aplicación\n",
-        "      print(\"\\nGracias por usar ContaExpress\")\n",
+        "      print(\"\\nGracias por usar ContAgro\")\n",
         "  else:\n",
         "      print(\"\\nEsa opción no está dentro de nuestro menú\")\n",
         "      print(\"\\nVuelva a intentarlo\")\n",
@@ -249,14 +250,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 71,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "f0e6e9e7-9c3f-413e-9c60-10c83181feca"
+        "outputId": "043728f7-794f-4996-d1b5-862e245b3e67"
       },
       "outputs": [
         {
@@ -273,24 +274,30 @@
             "\n",
             "4.Salir\n",
             "\n",
-            " Digite una opción: 2\n",
-            " Seleccione una opción de nuestro menú:\n",
+            " Digite una opción: 1\n",
             "\n",
-            "1.Promedio\n",
+            "Ingrese la fecha de la transacción (DD/MM/YY): 12/09/2025\n",
             "\n",
-            "2.Total\n",
+            "Ingrese la descripción de la transacción:Pago a proveedores\n",
             "\n",
-            "3.Regresar al menú anterior\n",
+            "Ingrese 1 para ingreso o 2 para egreso:2\n",
             "\n",
-            "Digite una opción: 2\n",
+            "Ingrese 1 para gastos operacionales o 2 para otros gastos: 2\n",
             "\n",
-            "El total por tipo de transacción es:\n",
-            "Ingreso/Egreso\n",
-            "Egreso - Operacional      53000.0\n",
-            "Egreso - Otros          1000000.0\n",
-            "Ingreso - Aporte          30000.0\n",
-            "Ingreso - Venta          116000.0\n",
-            "Name: Valor ($COP), dtype: float64\n",
+            "Ingrese el valor de la transacción $COP: 100000\n",
+            "\n",
+            "Presione una tecla para continuar...\n",
+            " Hola Lina, seleccione una opción de nuestro menú:\n",
+            "\n",
+            "1.Ingresar una nueva transacción\n",
+            "\n",
+            "2.Resumir por transacción\n",
+            "\n",
+            "3.Visualizar las últimas cinco (5) transacciones\n",
+            "\n",
+            "4.Salir\n",
+            "\n",
+            " Digite una opción: 3\n",
             "\n",
             "Gracias por usar ContAgro\n"
           ]
