--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "NLUvRQTyWC7b",
       "metadata": {
         "id": "NLUvRQTyWC7b"
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "Tudu9sXyWMnK",
       "metadata": {
         "id": "Tudu9sXyWMnK"
@@ -59,12 +59,12 @@
         "id": "wOprToC5Wlkc"
       },
       "id": "wOprToC5Wlkc",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "65c00c73-b876-4907-94a1-5f64aab50aee",
       "metadata": {
         "colab": {
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -147,8 +147,8 @@
         "        elif complemento == \"2\":\n",
         "            cuenta = \"Ingreso - Aporte\"\n",
         "        else:\n",
-        "            print(\"\\nLa opción seleccionada no es correcta\")\n",
-        "            menu(nombre)\n",
+        "            print(\"\\nLa opción seleccionada no es correcta, ingrese nuevamente la transacción\")\n",
+        "            nueva_transaccion(nombre, datos)\n",
         "    # Si es un egreso, pregunta si es operacional o es otro tipo de gasto\n",
         "    elif cuenta == \"2\":\n",
         "        # Genera el nombre completo de la cuenta\n",
@@ -158,10 +158,11 @@
         "        elif complemento == \"2\":\n",
         "            cuenta = \"Egreso - Otros\"\n",
         "        else :\n",
-        "            print(\"\\nLa opción seleccionada no es correcta\")\n",
+        "            print(\"\\nLa opción seleccionada no es correcta, ingrese nuevamente la transacción\")\n",
+        "            nueva_transaccion(nombre, datos)\n",
         "    else:\n",
-        "        print(\"\\nLa opción seleccionada no es correcta\")\n",
-        "        menu(nombre)\n",
+        "        print(\"\\nLa opción seleccionada no es correcta, ingrese nuevamente la transacción)\n",
+        "        nueva_transaccion(nombre, datos)\n",
         "    # solicita el valor de la transacción\n",
         "    valor = float(input(\"\\nIngrese el valor de la transacción $COP: \"))\n",
         "    # Genera una lista con los datos de la transacción\n",
@@ -250,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
@@ -324,7 +325,7 @@
         "id": "LbkfH8Pcibjj"
       },
       "id": "LbkfH8Pcibjj",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +342,7 @@
         "outputId": "00e88e4a-4178-4bb4-bba3-84c64a05616b"
       },
       "id": "VUNUbHvGioMt",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
