--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -171,7 +171,7 @@
         "    datos.loc[len(datos)] = transaccion\n",
         "    # guarda el archivo modificado\n",
         "    datos.to_excel(\"/content/datos.xlsx\", index=False)\n",
-        "    input(\"\\nPresione una tecla para continuar...\")\n",
+        "    input(\"\\nLa transacción fue registrada, presione una tecla para continuar...\")\n",
         "    menu(nombre)\n",
         "\n",
         "# Definimos la función ultimas_transacciones para visualizar las últimas 5\n",
@@ -196,6 +196,7 @@
         "def revisar_opcion(opcion, nombre, datos):\n",
         "  # Establecemos las condiciones para cada opción del menú\n",
         "  # Inicializamos la lista de transacciones\n",
+        "  flag = True\n",
         "\n",
         "  if opcion == 1:\n",
         "      # En caso de que el usuario elija la opción 1, llama a la función\n",
@@ -242,11 +243,18 @@
         "  elif opcion == 4:\n",
         "      # Salimos de la aplicación\n",
         "      print(\"\\nGracias por usar ContAgro\")\n",
+        "      flag = False\n",
         "  else:\n",
         "      print(\"\\nEsa opción no está dentro de nuestro menú\")\n",
         "      print(\"\\nVuelva a intentarlo\")\n",
         "      print(\"\\n\")\n",
-        "      menu(nombre)"
+        "      app(nombre, datos)\n",
+        "  return flag\n",
+        "\n",
+        "def app(nombre, datos):\n",
+        "  os.system(\"cls\")\n",
+        "  opcion = menu(nombre)\n",
+        "  revisar_opcion(opcion, nombre, datos)"
       ]
     },
     {
@@ -308,11 +316,10 @@
         "# hacemos uso de la función que acabamos de declarar. La salida\n",
         "# de la función la almacenamos en la variable opcion\n",
         "while True:\n",
-        "  os.system(\"cls\")\n",
-        "  opcion = menu(nombre)\n",
-        "  revisar_opcion(opcion, nombre, datos)\n",
-        "  print(\"\\nGracias por usar ContAgro\")\n",
-        "  break\n"
+        "  if flag:\n",
+        "    app(nombre, datos)\n",
+        "  else:\n",
+        "    break\n"
       ]
     },
     {
